--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
   },
   "homepage": "https://github.com/Otard95/Smidig-Kolonial#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
+    "debug": "^3.1.0",
     "express": "^4.16.2",
-    "nuxt": "^1.0.0-rc11",
+    "express-handlebars": "^3.0.0",
     "request": "^2.83.0",
-    "vue": "^2.5.9"
+    "serve-favicon": "^2.4.5"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
