--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Smidig prosjekt - kolonial",
   "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
     "test": "node ./test.js"
   },
   "repository": {
