--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "debug": "^3.1.0",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
+    "morgan": "^1.9.0",
     "request": "^2.83.0",
     "serve-favicon": "^2.4.5"
   },
