--- a/package.json
+++ b/package.json
@@ -34,11 +34,15 @@
     "debug": "^3.1.0",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
+    "firebase": "^5.0.2",
+    "helmet": "^3.12.0",
     "morgan": "^1.9.0",
     "request": "^2.83.0",
     "serve-favicon": "^2.4.5"
   },
   "devDependencies": {
+    "colors": "^1.2.5",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-livereload": "^3.8.1",
