--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./bin/www",
-    "test": "node ./test.js"
+    "test": "node ./testing/test.js"
   },
   "repository": {
     "type": "git",
