modified:   _sass/calendar.sass 	modified:   _sass/main.sass 	modified:   _sass/week.sass 	modified:   public/css/calendar.css 	modified:   public/css/main.css 	modified:   public/css/week.css 	new file:   public/imgs/icon/Chat.png 	new file:   public/imgs/icon/Handlekurv.png 	new file:   public/imgs/icon/Handleliste.png 	new file:   public/imgs/icon/Handlelister.png 	new file:   public/imgs/icon/Pil.png 	new file:   public/imgs/icon/Varer 2.png 	new file:   public/imgs/icon/Varer.png 	modified:   routes/calender.js 	new file:   routes/sok.js 	modified:   views/partials/Footer.hbs 	modified:   views/partials/headerplanner.hbs 	new file:   views/sok.hbs 	modified:   views/week.hbs

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ node_modules/serve-favicon/*
 !node_modules/cookie-parser/LICENSE
 !node_modules/debug/LICENSE
 !node_modules/serve-favicon/LICENSE
+*.json
