--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "smidig-kolonial",
   "version": "0.0.1",
   "description": "Smidig prosjekt - kolonial",
-  "main": "index.js",
+  "main": "./bin/www",
   "scripts": {
     "start": "node ./bin/www",
     "test": "node ./testing/test.js"
